# SFML-Asteroid-Shooter

./: CMakeLists.txt  README  README.md
src/: main.cpp
src/configs/: configs.cpp  configs.h  resource_manager.h
src/events/: action.cpp  action.h  action_map.h  action_target.cpp  action_target.h
src/model/: enemy.cpp  enemy.h  entity.cpp  entity.h  game.cpp  game.h  meteor.cpp  meteor.h  player.cpp  player.h  saucer.cpp  saucer.h  shoot.cpp  shoot.h  world.cpp  world.h
src/utils/: collision.cpp  collision.h  game.cpp  game.h  player.cpp  player.h  random.h
